Code cleaning (readability, maintainability, performance optimizations, better logs), enhanced documentation